<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <org.huaiangg.mt.plantprotect.PaintVedeo
        android:id="@+id/paintVedio"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_action_left" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnBack"
        android:layout_alignBottom="@+id/btnBack"
        android:layout_toRightOf="@+id/btnBack"
        android:text="@string/btn_action_right" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignBottom="@+id/btnLeft"
        android:layout_toRightOf="@+id/btnLeft"
        android:text="@string/btn_action_back" />

    <Button
        android:id="@+id/btnForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLeft"
        android:layout_toRightOf="@+id/btnLeft"
        android:text="@string/btn_action_forword" />

    <Button
        android:id="@+id/engineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/engineBack"
        android:layout_alignBottom="@+id/engineBack"
        android:layout_toLeftOf="@+id/engineBack"
        android:text="@string/btn_steer_left" />

    <Button
        android:id="@+id/engineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_steer_right" />

    <Button
        android:id="@+id/engineBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/engineRight"
        android:layout_alignBottom="@+id/engineRight"
        android:layout_toLeftOf="@+id/engineRight"
        android:text="@string/btn_steer_back" />

    <Button
        android:id="@+id/engineForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/engineRight"
        android:layout_toLeftOf="@+id/engineRight"
        android:text="@string/btn_steer_forword" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/humiture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/change"
        android:layout_centerVertical="true"
        android:text="@string/btn_action_reset"
        android:textSize="20sp" />

    <Button
        android:id="@+id/penwu"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Reset"
        android:layout_alignRight="@+id/btnForward"
        android:layout_marginRight="17dp"
        android:text="@string/btn_start_work" />

    <Switch
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/penwu"
        android:layout_alignBottom="@+id/penwu"
        android:layout_alignLeft="@+id/engineForward"
        android:textOff="@string/btn_status_off"
        android:textOn="@string/btn_status_on" />

</RelativeLayout>