<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zbhx.activity.Main" >

<TextView
        android:id="@+id/headStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headStr" />

    <Button
        android:id="@+id/btnSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/headStr"
        android:layout_below="@+id/headStr"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="82dp"
        android:text="@string/btn_config" />

    <Button
        android:id="@+id/btnConn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSet"
        android:layout_alignBottom="@+id/btnSet"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/btnSet"
        android:text="@string/btn_connect_wifi" />


   <!--  <ImageButton
        android:id="@+id/imageButtonTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnConn"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/headStr"
        android:layout_marginRight="37dp"
        android:layout_toRightOf="@+id/btnConn"
        android:src="@drawable/test"
         /> -->

</RelativeLayout>
